@@ -11,7 +11,6 @@ import lombok.NoArgsConstructor;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Data
 @NoArgsConstructor
@@ -34,10 +33,25 @@ public class DatabaseMetadata {
         return indMap.get(columnName);
     }
 
-    public Collection<FunctionalDependency> getMeaningfulFunctionalDependencies() {
-        return fds.stream()
-                .filter(fd -> !getUccs().contains(new UniqueColumnCombination(fd.getDeterminant())))
-                .collect(Collectors.toList());
+    public Collection<FunctionalDependency> getFunctionalDependencies(Column columnName, int size){
+        return fdMap.get(columnName).stream().filter(e -> e.getDeterminant().size() <= size).toList();
+    }
+    public Collection<UniqueColumnCombination> getUniqueColumnCombinations(Column columnName, int size){
+        return uccMap.get(columnName).stream().filter(e -> e.getColumnCombination().size() <= size).toList();
+    }
+    public Collection<InclusionDependency> getInclusionDependencies(Column columnName, int size){
+        return indMap.get(columnName).stream().filter(e -> e.getDependant().size() <= size).toList();
     }
 
+    public Collection<FunctionalDependency> getMeaningfulFunctionalDependencies() {
+        return fds.stream()
+                .filter(fd -> !getUccs().contains(new UniqueColumnCombination(fd.getDeterminant()))).toList();
+    }
+
+    public Collection<FunctionalDependency> getMeaningfulFunctionalDependencies(int size) {
+        return fds.stream()
+                .filter(fd -> fd.getDeterminant().size() <= size
+                        && !getUccs().contains(new UniqueColumnCombination(fd.getDeterminant()))
+                ).toList();
+    }
 }
